--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -14,7 +14,7 @@
  </ol> -->
 <div >
 <form style="text-align: center;" class="container"  [formGroup]="form" (ngSubmit)="onSubmit()" >
-   <div >
+   <div class="lol" >
       <div>
          <label><b>Username</b></label>
          <input type="text" name="name" placeholder="name" formControlName="name" ><br />
