--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -5,7 +5,20 @@
     padding: 1s0px 10px;
     width: 100%;
     margin-right: 100%;
+    left: 0;
+    top: 0;
+    position: fixed;
     
+
+    // overflow: hidden;
+    // background-color: #8378e5;
+    // padding: 1s0px 10px;
+    // width: 100%;
+    // margin-right: 100%;
+    // left: 0;
+    //top:0
+    // position: fixed;
+    // border: 1;
   
     
     
