--- a/src/app/list/list.component.scss
+++ b/src/app/list/list.component.scss
@@ -38,7 +38,7 @@
     border-radius: 10px;
     background-color: #f2f2f2;
     padding: 0px;
-    margin-top  : 3px;
+    margin-top  : 100px;
   }
   form {
     width: 30em;
@@ -46,6 +46,16 @@
     max-height: 100%;
     margin: 0 auto;
    float:inline-end;
+   margin-top: auto;
+
+
+
+
+  //  width: 30em;
+  //   max-width: 30%;
+  //   max-height: 100%;
+  //   margin: 0 auto;
+  //  float:inline-end;
    
   }
   
